Fix extra margin issue

--- a/src/components/navBar/navBar.module.css
+++ b/src/components/navBar/navBar.module.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   min-height: 47px;
-  margin-bottom: 16px;
   text-align: center;
 }
 
